# vpn-deploy

./: .gitignore  MIGRATION_SUMMARY.md  README.md  cdk.json  layer_requirements.txt  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  test.sh  tsconfig.json
.claude/: settings.json
.github/: dependabot.yml  secret-rotation.yml
.github/workflows/: claude.yml  dependabot.yml  rotate-secrets.yml
lib/: vpn-deploy-stack.ts  vpn-lambda-deploy-stack.ts  vpn-pipeline-app-stage.ts  vpn-pipeline-lambda-stage.ts  vpn-pipeline-stack.ts  vpn-vm-deploy-stack.ts  vpn_pipeline_app_stage.ts  vpn_pipeline_stack.ts
migration/: README.md  migrate-secrets-to-parameters.py
scripts/: patch-brace-expansion.cjs
src/api_key_rotator/: handler.py
src/vpn_starter_proxy/: index.ts  package-lock.json  package.json  tsconfig.json
src/vpn_toggle/: aws_helpers.py  vpn_toggle.py
test/: simple-validation.py  test-migration.py  validate-migration.py  vpn-deploy.test.ts  vpn-lambda-deploy.test.ts
