[tool.poetry]
name = "vpn_toggle"
version = "0.1.0"
description = "Toggles a VPN in a given region either on or off, depending on its current state."
authors = ["Eamon Mason <eamon.mason@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.28.49"
pydantic = "^2.10.6"
urllib3 = "^2.6.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
prospector= "^0.12.2"
pydocstyle = "^6.3.0"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120